# aem4-contract-change-detector

./: .env.example  .gitignore  GUIA.md  README.md  pyproject.toml  requirements.txt
data/test_contracts/: README.md
src/: image_parser.py  main.py  models.py
src/agents/: contextualization_agent.py  extraction_agent.py
src/shared/: config.py  logger.py  observability.py
